# loc-counter

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
loc_counter/: __init__.py  core.py
tests/: test_loc_counter.py
